--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "plugins/fzf"]
 	path = plugins/fzf
 	url = git@github.com:junegunn/fzf.git
-[submodule "zsh/original"]
-	path = zsh/original
+[submodule "zsh/oh-my-zsh"]
+	path = zsh/oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
