:wrench: ignore changes in git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,20 @@
 [submodule "plugins/zsh-autosuggestions"]
 	path = plugins/zsh-autosuggestions
 	url = git@github.com:zsh-users/zsh-autosuggestions.git
+	ignore = dirty
 [submodule "plugins/zsh-z"]
 	path = plugins/zsh-z
 	url = git@github.com:agkozak/zsh-z.git
+	ignore = dirty
 [submodule "plugins/fzf"]
 	path = plugins/fzf
 	url = git@github.com:junegunn/fzf.git
+	ignore = dirty
 [submodule "zsh/oh-my-zsh"]
 	path = zsh/oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
+	ignore = dirty
 [submodule "node/nvm"]
 	path = node/nvm
 	url = git@github.com:nvm-sh/nvm.git
+	ignore = dirty
