--- a/templates/.npmrc
+++ b/templates/.npmrc
@@ -1,4 +1,4 @@
 init-author-username=mreysei
 init-author-name=Michael Reyes Seiffert
-init-author-email=mreysei@hotmail.com
+init-author-email=maikelreyes96@gmail.com
 init-author-url=https://www.mreysei.dev
